fruit and brutalism

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Style Calculator</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link id="theme" rel="stylesheet" href="styles/frutigeraero.css" />
+    <link id="theme" rel="stylesheet" href="styles/neubrutalism.css" />
     <style>
       @media only screen and (max-width: 400px) {
         #selection-menu {
@@ -33,16 +33,18 @@
           <!-- Might not do all these but do at least 4-->
           <option value="frutigeraero" selected>Frutiger Aero</option>
           <option value="glassmorphism" disabled>Glassmorphism</option>
-          <option value="neubrutalism" disabled>Neubrutalism</option>
+          <option value="neubrutalism">Neubrutalism</option>
           <option value="minimalism">Minimalism</option>
-          <option value="skeuomorphism" disabled>Skeuomorphism</option>
+          <option value="skeuomorphism">Skeuomorphism</option>
           <option value="system1" disabled>System 1</option>
           <option value="windows95" disabled>Windows 95</option>
           <option value="none">None</option>
         </select>
       </div>
       <div class="calculator-wrapper" style="margin: auto; max-width: 500px">
-        <div id="top-number"><p id="input-number">1234567890</p></div>
+        <div id="top-number" style="overflow-y: hidden; overflow-x: auto">
+          <p id="input-number">1234567890</p>
+        </div>
         <div
           style="
             display: grid;
